<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/change_password"
        android:title="Change Password" />
    <item
        android:id="@+id/delete_networth"
        android:title="Delete Networth" />
</menu>