<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#2A2A2A">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_earnings"
        android:icon="@drawable/ic_earnings"
        android:title="Earnings" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_expenses"
        android:title="Expenses" />

    <item
        android:id="@+id/navigation_admin"
        android:icon="@drawable/ic_admin_panel"
        android:title="Admin" />


</menu>